--- a/MasterDetailDemo/MasterDetailDemo/Yokuwakaran/SettingPage.xaml
+++ b/MasterDetailDemo/MasterDetailDemo/Yokuwakaran/SettingPage.xaml
@@ -5,21 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentPage.Content>
         <StackLayout>
-            <ListView>
-                <ListView.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>てす</x:String>
-                        <x:String>と</x:String>
-                        <x:String>monotouch</x:String>
-                        <x:String>monorail</x:String>
-                        <x:String>monodevelop</x:String>
-                        <x:String>monotone</x:String>
-                        <x:String>monopoly</x:String>
-                        <x:String>monomodal</x:String>
-                        <x:String>mononucleosis</x:String>
-                    </x:Array>
-                </ListView.ItemsSource>
-            </ListView>
+            <Button Clicked="Button_Clicked" Text="Crash" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
